media/webrtc/signaling/src/media-conduit/AudioConduit.h
@@ -137,6 +137,8 @@ class WebrtcAudioConduit : public AudioSessionConduit,
    * @param capture_delay [in]: Estimated Time between reading of the samples
    *                            to rendering/playback
    * @param lengthSamples [in]: Contain maximum length of speechData array.
+   * @param numChannels [out]: Number of channels in the audio frame,
+   *                           guaranteed to be non-zero.
    * @param lengthSamples [out]: Will contain length of the audio frame in
    *                             samples at return.
    *                             Ex: A value of 160 implies 160 samples each of
@@ -151,7 +153,8 @@ class WebrtcAudioConduit : public AudioSessionConduit,
   MediaConduitErrorCode GetAudioFrame(int16_t speechData[],
                                       int32_t samplingFreqHz,
                                       int32_t capture_delay,
-                                      int& lengthSamples) override;
+                                      size_t& numChannels,
+                                      size_t& lengthSamples) override;
 
   /**
    * Webrtc transport implementation to send and receive RTP packet.
