media/webrtc/signaling/src/mediapipeline/MediaPipeline.cpp
@@ -1320,11 +1320,12 @@ class MediaPipelineReceiveAudio::PipelineListener
     // in the graph rate.
 
     while (mPlayedTicks < aDesiredTime) {
-      const int scratchBufferLength =
+      constexpr size_t scratchBufferLength =
           AUDIO_SAMPLE_BUFFER_MAX_BYTES / sizeof(int16_t);
       int16_t scratchBuffer[scratchBufferLength];
 
-      int samplesLength = scratchBufferLength;
+      size_t channelCount = 0;
+      size_t samplesLength = scratchBufferLength;
 
       // This fetches 10ms of data, either mono or stereo
       MediaConduitErrorCode err =
@@ -1332,7 +1333,7 @@ class MediaPipelineReceiveAudio::PipelineListener
               ->GetAudioFrame(scratchBuffer, mRate,
                               0,  // TODO(ekr@rtfm.com): better estimate of
                                   // "capture" (really playout) delay
-                              samplesLength);
+                              channelCount, samplesLength);
 
       if (err != kMediaConduitNoError) {
         // Insert silence on conduit/GIPS failure (extremely unlikely)
@@ -1341,6 +1342,7 @@ class MediaPipelineReceiveAudio::PipelineListener
                  " (desired %" PRId64 " -> %f)",
                  err, mPlayedTicks, aDesiredTime,
                  mSource->TrackTimeToSeconds(aDesiredTime)));
+        channelCount = 1;
         // if this is not enough we'll loop and provide more
         samplesLength = samplesPer10ms;
         PodArrayZero(scratchBuffer);
@@ -1349,16 +1351,12 @@ class MediaPipelineReceiveAudio::PipelineListener
       MOZ_RELEASE_ASSERT(samplesLength <= scratchBufferLength);
 
       MOZ_LOG(gMediaPipelineLog, LogLevel::Debug,
-              ("Audio conduit returned buffer of length %u", samplesLength));
+              ("Audio conduit returned buffer of length %zu", samplesLength));
 
       RefPtr<SharedBuffer> samples =
           SharedBuffer::Create(samplesLength * sizeof(uint16_t));
       int16_t* samplesData = static_cast<int16_t*>(samples->Data());
       AudioSegment segment;
-      // We derive the number of channels of the stream from the number of
-      // samples the AudioConduit gives us, considering it gives us packets of
-      // 10ms and we know the rate.
-      uint32_t channelCount = samplesLength / samplesPer10ms;
       AutoTArray<int16_t*, 2> channels;
       AutoTArray<const int16_t*, 2> outputChannels;
       size_t frames = samplesLength / channelCount;
